# SEP-mcp

./: COMPREHENSIVE_MCP_TEST.py  CONFIGURATION_GUIDE.md  DOCUMENTATION_REVIEW_FINDINGS.md  MCP_TOOL_GUIDE.md  QUICK_REFERENCE.md  README.md  TEST_RESULTS.md  autonomous_agent_demo.py  kilo_code_task_feb-21-2026_4-13-06-pm.md  mcp_server.py  memory_benchmark.py  pyproject.toml  requirements.txt  setup.py  visualize_manifold_3d.py
.kilocode/: mcp.json
reports/: langchain_validation_data.csv  mcp_tool_report.md  react_validation_case_study.md  true_validation_study.md
scripts/: find_thresholds.py
scripts/rag/: pair_programmer_agent.py
scripts/tests/: test_mcp_tools.py
src/: CMakeLists.txt
src/manifold/: __init__.py  ast_deps.py  git_churn.py  semantic.py  sidecar.py  valkey_client.py
tests/: README.md  benchmark_scope.py  test_mcp_tools.py
