[project]
name = "structural-manifold-compression"
version = "0.1.0"
description = "Text-only structural manifold compression benchmark suite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "valkey>=6.0.0",
]

[project.scripts]
sep-mcp = "mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
